--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,20 +1,22 @@
-<div class="jumbo">
-  <h2>About Our Company</h2>
-  <p>
-    PhanLinks is the leader in on-demand mobile car services, offering a unique,
-    easy-to-use app and insured providers who utilize efficient techniques and
-    products.
+<div class="jumbotron">
+  <h1 class="display-3">PhanLinks, Inc.</h1>
+  <p class="lead">PhanLinks is the leader in on-demand mobile car services, offering a unique,
+  easy-to-use app and insured providers who utilize efficient techniques and
+  products
   </p>
+  <hr class="my-2">
   <p>
-    Service providers are now available all over Southern California, including:
-  </p>
-  <p>
+    Service providers are now available all over Southern California, including:<br>
     Newport Beach<br>
     Costa Mesa<br>
     Santa Ana<br>
     Anaheim
   </p>
-  {{#link-to 'how-it-works' class="button"}}
-    See How It Works
-  {{/link-to}}
+  <p class="lead">
+    <a>
+      {{#link-to 'how-it-works' class="button"}}
+        See How It Works
+      {{/link-to}}
+    </a>
+  </p>
 </div>
