--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,16 +1,51 @@
 <div class="jumbo">
   <h2>Contact Info</h2>
-  <p>
-    PhanLinks, Inc.
-    <address>
-      14221 North Euclid Street, Suite 200
-      Garden Grove, CA 92843
-    </address>
-    Telephone: <a href="tel:886.760.2966">+1 886 760 2966</a><br>
-    Fax: <a href="fax:866.760.2966">+1 886 760 2966</a><br>
-    Email: <a href="mailto:info@PhanLinks.com">info@PhanLinks.com</a>
-  </p>
-  {{#link-to 'about' class="button"}}
-    About Us
-  {{/link-to}}
+  <div class="contact info">
+    <p>
+      PhanLinks, Inc.
+      <address>
+        14221 North Euclid Street, Suite 200
+        Garden Grove, CA 92843
+      </address>
+      Telephone: <a href="tel:886.760.2966">+1 886 760 2966</a><br>
+      Fax: <a href="fax:866.760.2966">+1 886 760 2966</a><br>
+      Email: <a href="mailto:info@PhanLinks.com">info@PhanLinks.com</a>
+    </p>
+  </div>
+  <form class="col-sm-8">
+    <div class="form-group row">
+      <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
+      <div class="col-sm-10">
+        <input class="form-control" type="text" id="first-name">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
+      <div class="col-sm-10">
+        <input class="form-control" type="text" id="last-name">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="email" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input class="form-control" type="email" id="email">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="message" class="col-sm-2 col-form-label">Message</label>
+      <div class="col-sm-10">
+        <textarea class="form-control" rows="3" id="message"></textarea>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="offset-sm-2 col-sm-10">
+        <button type="submit" class="btn btn-primary">Send</button>
+      </div>
+    </div>
+  </form>
+  <div class="col-sm-5">
+    {{#link-to 'about' class="button"}}
+      About Us
+    {{/link-to}}
+  </div>
 </div>
