--- a/app/templates/how-it-works.hbs
+++ b/app/templates/how-it-works.hbs
@@ -1,14 +1,32 @@
-<div class="jumbo">
-  <h2>How It Works</h2>
-  <p>
-    Enter your provider ID to activate your account as a provider
-  </p>
-  <p>
-    Tap 'Online' when you are ready for work
-  </p>
-  <p>
-    Tap 'Countdown' to accept the service request
-  </p>
+<h2>How It Works</h2>
+<div class="col-sm-8 sm-center">
+  <div class="card col-sm-4 card-outline-primary text-xs-center">
+    <img src="..." alt="Card image">
+    <div class="card-block">
+      <blockquote class="card-blockquote">
+        <p>Enter your provider ID to activate your account as a provider.</p>
+      </blockquote>
+    </div>
+  </div>
+  <div class="card col-sm-4 card-outline-primary text-xs-center">
+    <img src="..." alt="Card image">
+    <div class="card-block">
+      <blockquote class="card-blockquote">
+        <p>Tap 'Online' when you are ready for work.</p>
+      </blockquote>
+    </div>
+  </div>
+  <div class="card col-sm-4 card-outline-primary text-xs-center">
+    <img src="..." alt="Card image">
+    <div class="card-block">
+      <blockquote class="card-blockquote">
+        <p>Tap 'Countdown' to accept the service request.</p>
+      </blockquote>
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-5">
   {{#link-to 'become-provider' class="button"}}
     Become A Provider
   {{/link-to}}
