--- a/app/templates/become-provider.hbs
+++ b/app/templates/become-provider.hbs
@@ -1,30 +1,37 @@
-<h2>Benefits Of Becomimg A Provider</h2>
-<div class="col-sm-8 sm-center">
-  <div class="col-sm-4 card card-outline-primary text-xs-center">
-    <div class="card-block">
-      <blockquote class="card-blockquote">
-        <p>Start working whenever you want and wherever you want.</p>
-      </blockquote>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>Benefits Of Becomimg A Provider</h2>
     </div>
   </div>
-  <div class="col-sm-4 card card-outline-primary text-xs-center">
-    <div class="card-block">
-      <blockquote class="card-blockquote">
-        <p>Your weekly earnings will be directly deposited to your account.</p>
-      </blockquote>
+  <div class="row">
+    <div class="col-sm-4 card card-outline-primary text-xs-center">
+      <div class="card-block">
+        <blockquote class="card-blockquote">
+          <p>Start working whenever you want and wherever you want.</p>
+        </blockquote>
+      </div>
+    </div>
+    <div class="col-sm-4 card card-outline-primary text-xs-center">
+      <div class="card-block">
+        <blockquote class="card-blockquote">
+          <p>Your weekly earnings will be directly deposited to your account.</p>
+        </blockquote>
+      </div>
+    </div>
+    <div class="col-sm-4 card card-outline-primary text-xs-center">
+      <div class="card-block">
+        <blockquote class="card-blockquote">
+          <p>Your professional services will be rated by the customers. This will help you earn more.</p>
+        </blockquote>
+      </div>
     </div>
   </div>
-  <div class="col-sm-4 card card-outline-primary text-xs-center">
-    <div class="card-block">
-      <blockquote class="card-blockquote">
-        <p>Your professional services will be rated by the customers. This will help you earn more.</p>
-      </blockquote>
+  <div class="row">
+    <div class="col-sm-6">
+      To register as a provider{{#link-to 'registration' class="button"}}
+        click here
+      {{/link-to}}
     </div>
   </div>
-</div>
-
-<div class="col-sm-5">
-  To register as a provider{{#link-to 'registration' class="button"}}
-    click here
-  {{/link-to}}
 </div>
