--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,62 +1,70 @@
-<div class="jumbo">
-  <h2>Provider Registration</h2>
-  <form class="col-sm-10">
-    <div class="form-group row">
-      <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
-      <div class="col-sm-10">
-        <input class="form-control" type="text" id="first-name">
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h2>Provider Registration</h2>
     </div>
-    <div class="form-group row">
-      <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
-      <div class="col-sm-10">
-        <input class="form-control" type="text" id="last-name">
-      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-8">
+      <form>
+        <div class="form-group row">
+          <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="text" id="first-name">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="text" id="last-name">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="email" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="email" id="email">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="tel" id="phone">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Best times to reach you?</label>
+          <div class="col-sm-10">
+            <select multiple class="form-control">
+              <option>9 AM to 12 PM</option>
+              <option>12 PM to 3 PM</option>
+              <option>3 PM to 6 PM</option>
+              <option>6 PM to 9 PM</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="company-name" class="col-sm-2 col-form-label">Company Name</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="text" id="company-name">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Preferred method of contact</label>
+          <div class="col-sm-10">
+            <label class="form-check-inline">
+              <input class="form-check-input" type="radio" value="option1"> Email
+            </label>
+            <label class="form-check-inline">
+              <input class="form-check-input" type="radio" value="option2"> Phone
+            </label>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="offset-sm-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </form>
     </div>
-    <div class="form-group row">
-      <label for="email" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input class="form-control" type="email" id="email">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-      <div class="col-sm-10">
-        <input class="form-control" type="tel" id="phone">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Best times to reach you?</label>
-      <div class="col-sm-10">
-        <select multiple class="form-control">
-          <option>9 AM to 12 PM</option>
-          <option>12 PM to 3 PM</option>
-          <option>3 PM to 6 PM</option>
-          <option>6 PM to 9 PM</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="company-name" class="col-sm-2 col-form-label">Company Name</label>
-      <div class="col-sm-10">
-        <input class="form-control" type="text" id="company-name">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Preferred method of contact</label>
-      <div class="col-sm-10">
-        <label class="form-check-inline">
-          <input class="form-check-input" type="radio" value="option1"> Email
-        </label>
-        <label class="form-check-inline">
-          <input class="form-check-input" type="radio" value="option2"> Phone
-        </label>
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="offset-sm-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    </div>
-  </form>
+  </div>
 </div>
