--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -10,25 +10,37 @@
         <div class="form-group row">
           <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
           <div class="col-sm-10">
-            <input class="form-control" type="text" id="first-name">
+            {{input type="text" class="form-control" value=firstName}}
           </div>
         </div>
         <div class="form-group row">
           <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
           <div class="col-sm-10">
-            <input class="form-control" type="text" id="last-name">
+            {{input type="text" class="form-control" value=lastName}}
           </div>
         </div>
         <div class="form-group row">
           <label for="email" class="col-sm-2 col-form-label">Email</label>
           <div class="col-sm-10">
-            <input class="form-control" type="email" id="email">
+            {{input type="email" class="form-control" value=email}}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="password" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            {{input type="password" class="form-control" value=password}}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="confirm-password" class="col-sm-2 col-form-label">Confirm Password</label>
+          <div class="col-sm-10">
+            {{input type="password" class="form-control" value=passwordConfirmation}}
           </div>
         </div>
         <div class="form-group row">
           <label for="phone" class="col-sm-2 col-form-label">Phone</label>
           <div class="col-sm-10">
-            <input class="form-control" type="tel" id="phone">
+            {{input type="phone" class="form-control" value=phone}}
           </div>
         </div>
         <div class="form-group row">
@@ -45,7 +57,7 @@
         <div class="form-group row">
           <label for="company-name" class="col-sm-2 col-form-label">Company Name</label>
           <div class="col-sm-10">
-            <input class="form-control" type="text" id="company-name">
+            {{input type="text" class="form-control" value=companyName}}
           </div>
         </div>
         <div class="form-group row">
@@ -61,7 +73,7 @@
         </div>
         <div class="form-group row">
           <div class="offset-sm-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" {{action 'submitUserData'}}>Submit</button>
           </div>
         </div>
       </form>
