Before adding Sass/bootstrap

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="jumbotron">
+<div local-class="phan-jumbo" class="jumbotron jumbotron-fluid">
+  <div class="container">
     <h1 class="display-3">PhanLinks, Inc.</h1>
     <p class="lead">PhanLinks is the leader in on-demand mobile car services, offering a unique,
     easy-to-use app and insured providers who utilize efficient techniques and
