--- a/app/templates/how-it-works.hbs
+++ b/app/templates/how-it-works.hbs
@@ -5,28 +5,34 @@
     </div>
   </div>
   <div class="row">
-    <div class="card col-sm-4 card-outline-primary text-xs-center">
-      <img src="..." alt="Card image">
-      <div class="card-block">
-        <blockquote class="card-blockquote">
-          <p>Enter your provider ID to activate your account as a provider.</p>
-        </blockquote>
+    <div class="col-sm-3">
+      <div class="card card-outline-primary text-xs-center">
+        <img src="..." alt="Card image">
+        <div class="card-block">
+          <blockquote class="card-blockquote">
+            <p>Enter your provider ID to activate your account as a provider.</p>
+          </blockquote>
+        </div>
       </div>
     </div>
-    <div class="card col-sm-4 card-outline-primary text-xs-center">
-      <img src="..." alt="Card image">
-      <div class="card-block">
-        <blockquote class="card-blockquote">
-          <p>Tap 'Online' when you are ready for work.</p>
-        </blockquote>
+    <div class="col-sm-3">
+      <div class="card card-outline-primary text-xs-center">
+        <img src="..." alt="Card image">
+        <div class="card-block">
+          <blockquote class="card-blockquote">
+            <p>Tap 'Online' when you are ready for work.</p>
+          </blockquote>
+        </div>
       </div>
     </div>
-    <div class="card col-sm-4 card-outline-primary text-xs-center">
-      <img src="..." alt="Card image">
-      <div class="card-block">
-        <blockquote class="card-blockquote">
-          <p>Tap 'Countdown' to accept the service request.</p>
-        </blockquote>
+    <div class="col-sm-3">
+      <div class="card card-outline-primary text-xs-center">
+        <img src="..." alt="Card image">
+        <div class="card-block">
+          <blockquote class="card-blockquote">
+            <p>Tap 'Countdown' to accept the service request.</p>
+          </blockquote>
+        </div>
       </div>
     </div>
   </div>
