--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,49 +1,35 @@
-<div class="container">
-  <div class="row">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand">
-            {{#link-to 'index'}}
-              PhanLinks
-            {{/link-to}}
-          </a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li>
-              {{#link-to 'about'}}
-                About
-              {{/link-to}}
-            </li>
-            <li>
-              {{#link-to 'become-provider'}}
-                Become A Provider
-              {{/link-to}}
-            </li>
-            <li>
-              {{#link-to 'how-it-works'}}
-                How It Works
-              {{/link-to}}
-            </li>
-            <li>
-              {{#link-to 'registration'}}
-                Registration
-              {{/link-to}}
-            </li>
-            <li>
-              {{#link-to 'contact'}}
-                Contact
-              {{/link-to}}
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-  </div>
-  <div class="row">
-    {{outlet}}
-  </div>
-</div>
+<nav class="navbar navbar-light bg-info">
+  <a class="navbar-brand">
+    {{#link-to 'index'}}
+      PhanLinks
+    {{/link-to}}
+  </a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      {{#link-to 'about'}}
+        About
+      {{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'become-provider'}}
+        Become A Provider
+      {{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'how-it-works'}}
+        How It Works
+      {{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'registration'}}
+        Registration
+      {{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'contact'}}
+        Contact
+      {{/link-to}}
+    </li>
+  </ul>
+</nav>
+{{outlet}}
