Sticking with ember-bootstrap

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-info">
+<nav class="navbar navbar-inverse bg-inverse">
   <a class="navbar-brand">
     {{#link-to 'index'}}
       PhanLinks
@@ -32,4 +32,5 @@
     </li>
   </ul>
 </nav>
+
 {{outlet}}
