--- a/app/templates/become-provider.hbs
+++ b/app/templates/become-provider.hbs
@@ -5,31 +5,25 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-3">
-      <div class="card card-outline-info text-xs-center">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p class="card-text">Start working whenever you want and wherever you want.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <p>Start working whenever you want and wherever you want.</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card card-outline-info text-xs-center">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p class="card-text">Your weekly earnings will be directly deposited to your account.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <p>Your weekly earnings will be directly deposited to your account.</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card card-outline-info mb-3 text-xs-center">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p class="card-text">Your professional services will be rated by the customers.
-            This will help you earn more.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <p>Your professional services will be rated by the customers.
+          This will help you earn more.</p>
         </div>
       </div>
     </div>
