--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,11 +1,10 @@
-<div local-class="phan-jumbo" class="jumbotron jumbotron-fluid">
+<div class="jumbotron" style="background-color: #ffffff; margin: 50px;">
   <div class="container">
     <h1 class="display-3">PhanLinks, Inc.</h1>
     <p class="lead">PhanLinks is the leader in on-demand mobile car services, offering a unique,
     easy-to-use app and insured providers who utilize efficient techniques and
     products
     </p>
-    <hr class="my-2">
     <p>
       Service providers are now available all over Southern California, including:<br>
       Newport Beach<br>
