--- a/app/templates/become-provider.hbs
+++ b/app/templates/become-provider.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-      <h2>Benefits Of Becomimg A Provider</h2>
+      <h2 class="header-custom">Benefits Of Becomimg A Provider</h2>
     </div>
   </div>
   <div class="row">
@@ -33,6 +33,14 @@
       To register as a provider{{#link-to 'registration' class="button"}}
         click here
       {{/link-to}}
+    </div>
+  </div>
+  <div class="card" style="width: 20rem;">
+    <img class="card-img-top" src="assets/images/1.png" alt="Card image cap" height="200" width="100">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 </div>
