--- a/app/templates/how-it-works.hbs
+++ b/app/templates/how-it-works.hbs
@@ -1,37 +1,31 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-6">
       <h2>How It Works</h2>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-3">
-      <div class="card card-outline-primary text-xs-center">
-        <img src="..." alt="Card image">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p>Enter your provider ID to activate your account as a provider.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <img src="assets/images/1.png" alt="First Slide" height="200" width="100">
+          <p>Enter your provider ID to activate your account as a provider.</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card card-outline-primary text-xs-center">
-        <img src="..." alt="Card image">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p>Tap 'Online' when you are ready for work.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <img src="assets/images/2.png" alt="Second Slide" height="200" width="100">
+          <p>Tap 'Online' when you are ready for work.</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card card-outline-primary text-xs-center">
-        <img src="..." alt="Card image">
-        <div class="card-block">
-          <blockquote class="card-blockquote">
-            <p>Tap 'Countdown' to accept the service request.</p>
-          </blockquote>
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <img src="assets/images/3.png" alt="Third Slide" height="200" width="100">
+          <p>Tap 'Countdown' to accept the service request.</p>
         </div>
       </div>
     </div>
