--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,11 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-4">
+  <div class="row align-items-center">
+    <div class="col-sm-5">
       <h2>Contact Info</h2>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
       <address>
         <h4>PhanLinks, Inc.</h4>
         14221 North Euclid Street, Suite 200<br>
@@ -15,45 +11,28 @@
         Email: <a href="mailto:info@PhanLinks.com">info@PhanLinks.com</a>
       </address>
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-7">
       <form>
-        <div class="form-group row">
-          <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
-          <div class="col-sm-10">
-            <input class="form-control" type="text" id="first-name">
-          </div>
+        <div class="form-group">
+          <label for="first-name">First Name</label>
+          <input class="form-control" type="text" id="first-name">
         </div>
-        <div class="form-group row">
-          <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
-          <div class="col-sm-10">
-            <input class="form-control" type="text" id="last-name">
-          </div>
+        <div class="form-group">
+          <label for="last-name">Last Name</label>
+          <input class="form-control" type="text" id="last-name">
         </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            <input class="form-control" type="email" id="email">
-          </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input class="form-control" type="email" id="email">
         </div>
-        <div class="form-group row">
-          <label for="message" class="col-sm-2 col-form-label">Message</label>
-          <div class="col-sm-10">
-            <textarea class="form-control" rows="3" id="message"></textarea>
-          </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea class="form-control" rows="3" id="message"></textarea>
         </div>
-        <div class="form-group row">
-          <div class="offset-sm-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Send</button>
-          </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Send</button>
         </div>
       </form>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      {{#link-to 'about' class="button"}}
-        About Us
-      {{/link-to}}
     </div>
   </div>
 </div>
