--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,80 +1,59 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-4">
+  <div class="row align-items-center">
+    <div class="col-sm-5">
       <h2>Provider Registration</h2>
+      <p>Please provide your information to register with Phanlinks. You will receive an email confirmation after completing the process.</p>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-7">
       <form>
-        <div class="form-group row">
-          <label for="first-name" class="col-sm-2 col-form-label">First Name</label>
-          <div class="col-sm-10">
-            {{input type="text" class="form-control" value=firstName}}
-          </div>
+        <div class="form-group">
+          <label for="first-name">First Name</label>
+          {{input type="text" class="form-control" value=firstName}}
         </div>
-        <div class="form-group row">
-          <label for="last-name" class="col-sm-2 col-form-label">Last Name</label>
-          <div class="col-sm-10">
-            {{input type="text" class="form-control" value=lastName}}
-          </div>
+        <div class="form-group">
+          <label for="last-name">Last Name</label>
+          {{input type="text" class="form-control" value=lastName}}
         </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            {{input type="email" class="form-control" value=email}}
-          </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          {{input type="email" class="form-control" value=email}}
         </div>
-        <div class="form-group row">
-          <label for="password" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
-            {{input type="password" class="form-control" value=password}}
-          </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          {{input type="password" class="form-control" value=password}}
         </div>
-        <div class="form-group row">
-          <label for="confirm-password" class="col-sm-2 col-form-label">Confirm Password</label>
-          <div class="col-sm-10">
-            {{input type="password" class="form-control" value=passwordConfirmation}}
-          </div>
+        <div class="form-group">
+          <label for="confirm-password">Confirm Password</label>
+          {{input type="password" class="form-control" value=passwordConfirmation}}
         </div>
-        <div class="form-group row">
-          <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-          <div class="col-sm-10">
-            {{input type="phone" class="form-control" value=phone}}
-          </div>
+        <div class="form-group">
+          <label for="phone" >Phone</label>
+          {{input type="phone" class="form-control" value=phone}}
         </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Best times to reach you?</label>
-          <div class="col-sm-10">
-            <select multiple class="form-control">
-              <option>9 AM to 12 PM</option>
-              <option>12 PM to 3 PM</option>
-              <option>3 PM to 6 PM</option>
-              <option>6 PM to 9 PM</option>
-            </select>
-          </div>
+        <div class="form-group">
+          <label>Best times to reach you?</label>
+          <select multiple class="form-control">
+            <option>9 AM to 12 PM</option>
+            <option>12 PM to 3 PM</option>
+            <option>3 PM to 6 PM</option>
+            <option>6 PM to 9 PM</option>
+          </select>
         </div>
-        <div class="form-group row">
-          <label for="company-name" class="col-sm-2 col-form-label">Company Name</label>
-          <div class="col-sm-10">
-            {{input type="text" class="form-control" value=companyName}}
-          </div>
+        <div class="form-group">
+          <label for="company-name">Company Name</label>
+          {{input type="text" class="form-control" value=companyName}}
         </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Preferred method of contact</label>
-          <div class="col-sm-10">
-            <label class="form-check-inline">
-              <input class="form-check-input" type="radio" value="option1"> Email
-            </label>
-            <label class="form-check-inline">
-              <input class="form-check-input" type="radio" value="option2"> Phone
-            </label>
-          </div>
+        <div class="form-group">
+          <label>Preferred method of contact</label>
+          <label class="form-check-inline">
+            <input class="form-check-input" type="radio" value="option1"> Email
+          </label>
+          <label class="form-check-inline">
+            <input class="form-check-input" type="radio" value="option2"> Phone
+          </label>
         </div>
-        <div class="form-group row">
-          <div class="offset-sm-2 col-sm-10">
-            <button type="submit" class="btn btn-primary" {{action 'submitUserData'}}>Submit</button>
-          </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary" {{action 'submitUserData'}}>Submit</button>
         </div>
       </form>
     </div>
