Layouts for provider and how it works

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -38,5 +38,6 @@
 {{outlet}}
 
 <footer>
-  <p>Testing footer</p>
+  <span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span>
+  <span class="glyphicon-class">PhanLinks, Inc.</span>
 </footer>
