--- a/app/templates/become-provider.hbs
+++ b/app/templates/become-provider.hbs
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-      <h2 class="header-custom">Benefits Of Becomimg A Provider</h2>
+      <h2 class="header-custom">Benefits Of Becoming A Provider</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-body">
@@ -28,19 +28,38 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-6">
-      To register as a provider{{#link-to 'registration' class="button"}}
-        click here
-      {{/link-to}}
+  <div class="row align-items-center">
+    <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <div class="card-block">
+          <h4 class="card-title">Convenience</h4>
+          <p class="card-text">Start working whenever you want and wherever you want.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <div class="card-block">
+          <h4 class="card-title">Instant Earnings</h4>
+          <p class="card-text">Your weekly earnings will be directly deposited to your account.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <div class="card-block">
+          <h4 class="card-title">Easy Bonuses</h4>
+          <p class="card-text">Your professional services will be rated by the customers.
+          This will help you earn more.</p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="card" style="width: 20rem;">
-    <img class="card-img-top" src="assets/images/1.png" alt="Card image cap" height="200" width="100">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="row align-items-center">
+    <div class="text-center">
+      {{#link-to 'registration' class="button"}}
+        Click here to register as a provider
+      {{/link-to}}
     </div>
   </div>
 </div>
