--- a/app/templates/how-it-works.hbs
+++ b/app/templates/how-it-works.hbs
@@ -4,7 +4,7 @@
       <h2>How It Works</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-body">
@@ -30,10 +30,39 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="assets/images/1.png" alt="Activate" height="200" width="100">
+        <div class="card-block">
+          <h4 class="card-title">Activate</h4>
+          <p class="card-text">Enter your provider ID to activate your account as a provider.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="assets/images/2.png" alt="Online" height="200" width="100">
+        <div class="card-block">
+          <h4 class="card-title">Go Online</h4>
+          <p class="card-text">Tap 'Online' when you are ready for work.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="assets/images/3.png" alt="Accept Service" height="200" width="100">
+        <div class="card-block">
+          <h4 class="card-title">Get To Work</h4>
+          <p class="card-text">Tap 'Countdown' to accept the service request.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row align-items-center">
+    <div class="text-center">
       {{#link-to 'become-provider' class="button"}}
-        Become A Provider
+        Click here to Become A Provider
       {{/link-to}}
     </div>
   </div>
